@@ -15,6 +15,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Enable a special exit to final map in random maps, through the
+ 'final_exit_archetype' field.
+ random_maps/exit.c random_map.c random_map.h reader.l
+Nicolas Weeger 2007-12-02
+
 Add death animation to objects, through the key 'death_animation' (which should
  be an archetype).
  server/attack.c: check for a death animation to insert.
